# careai-platform

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-inference.txt  requirements.txt
apps/control-plane-api/: Dockerfile  pyproject.toml
apps/control-plane-api/src/careai_control_plane_api/: __init__.py  api.py  database.py  drift_job.py  event_consumer.py  improvement.py  main.py  migration_runner.py  models.py  monitoring.py  planner_job.py  schemas.py  workflow_loop.py
apps/control-plane-api/src/careai_control_plane_api/migrations/: env.py
apps/control-plane-api/src/careai_control_plane_api/migrations/versions/: 0001_initial_control_plane_schema.py  0001_initial_schema.py  0002_workflow_tenant_scope.py
apps/control-plane-api/tests/: __init__.py  test_api.py  test_audit_unit.py  test_drift_job.py  test_event_consumer.py  test_health.py  test_migrations.py  test_monitoring.py  test_planner_job.py  test_workflow_loop.py
docs/: architecture.md  (+8 more)
pipelines/evaluate-rag/: README.md  pyproject.toml
pipelines/evaluate-rag/src/evaluate_rag/: __init__.py  client.py  metrics.py  models.py  run.py
pipelines/evaluate-rag/tests/: test_metrics.py  test_run.py
pipelines/ingest-rag/: README.md  pyproject.toml
pipelines/ingest-rag/src/ingest_rag/: __init__.py  azure_search.py  documents.py  embeddings.py  ingest.py  local_index.py  models.py
pipelines/ingest-rag/tests/: test_azure_search.py  test_documents.py  test_embeddings.py  test_ingest.py  test_local_index.py
(+85 files in other folders)
