[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluate-rag"
version = "0.1.0"
description = "RAG evaluation pipeline for careai-platform."
requires-python = ">=3.11"

[project.scripts]
careai-evaluate-rag = "evaluate_rag.run:main"

[tool.setuptools.packages.find]
where = ["src"]
