[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest-rag"
version = "0.1.0"
description = "Synthetic RAG document ingestion pipeline for careai-platform."
requires-python = ">=3.11"

[project.scripts]
careai-ingest-rag = "ingest_rag.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]
